Fixed Tabulator styles in dark mode.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11168,6 +11168,15 @@ pre, code {
 .emoji {
   font-family: 'Noto Color Emoji' !important; }
 
+body[data-bs-theme="dark"] .tabulator-col,
+body[data-bs-theme="dark"] .tabulator-row-odd {
+  background-color: #4e4e4e; }
+
+body[data-bs-theme="dark"] .tabulator-header,
+body[data-bs-theme="dark"] .tabulator-row-even,
+body[data-bs-theme="dark"] .tabulator-footer {
+  background-color: #2a2a2a !important; }
+
 .lazy-load {
   opacity: 0;
   -webkit-transform: translate(0, 30px) scale(1.05);
